# laba2test

./: CMakeLists.txt  test.cpp
cmake/: FindEpicycloid.cmake
